--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 <header>
     <nav>
         <ul>
-            <li><a href="">Appointments</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Doctors</a></li>
-            <li><a href="">Home</a></li>
-            <li><a href="">About Us</a></li>
-            <li><a href="">Contact Us</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Sign Up</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Gallery</a></li>
+            <li><a href="#">Sign Up</a></li>
         </ul>
     </nav>
 </header>
