--- a/login.html
+++ b/login.html
@@ -6,8 +6,44 @@
   <link rel="stylesheet" href="css/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg bg-dark ">
+  <div class="container-fluid text-secondary">
+    <a class="navbar-brand text-light" href="#">Emobilis</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent ">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active text-light" aria-current="page" href="home.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light" href="about us.html">About us</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-light" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu text-light">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link disabled text-light" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
 <div class="row">
-  <div class="col-md-4">
+  <div class="col-md-5 col-sm-4 col-3">
     <form>
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -25,7 +61,7 @@
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-5 col-sm-4 col-3">
     <form>
   <div class="mb-3">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -43,9 +79,9 @@
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-2 col-sm-4 col-6">
     <form>
-  <div class="mb-3">
+  <div class="mb-5 ">
     <label for="exampleInputEmail1" class="form-label">Email address</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
